src/tui/tests/widgets/snapshots/rmcl__tui__widgets__instances__tests__instances_list_renders_empty.snap
---
source: src/tui/tests/widgets/instances.rs
expression: terminal.backend()
---
"╭Instances─────────────────────────────╮"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
